--- a/src/components/sideBar/styles.module.scss
+++ b/src/components/sideBar/styles.module.scss
@@ -1,9 +1,9 @@
 .sideNavContainer {
-  width: 234px;
+  //width: 234px; Как будто это и не надо
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
 }
 
 .sideItem {
-
   font-size: 15px;
   font-weight: 400;
 }
@@ -14,4 +14,5 @@
 
 .sideBody {
   background-color: #fff;
+  width: 234px;
 }
