--- a/src/components/baseStatistic/widgets/smallWidget/styles.module.scss
+++ b/src/components/baseStatistic/widgets/smallWidget/styles.module.scss
@@ -6,3 +6,56 @@
   background-color: white;
   border-radius: 5px;
 }
+
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  // #2469ce
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  color: #3e4676;
+  font-size: .9375rem;
+  line-height: 1.5;
+}
+
+.circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #2469ce;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  color: white;
+}
+
+.value {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.stat {
+  color: #3e4676;
+}
+
+.statValue {
+  color: rgb(220 53 69);
+}
+
+.statGreen {
+  color: rgb(40 167 69);
+}
+
