--- a/src/components/baseStatistic/widgets/mapWidget/styles.module.scss
+++ b/src/components/baseStatistic/widgets/mapWidget/styles.module.scss
@@ -5,4 +5,14 @@
   height: 390px;
   background-color: white;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  margin-top: 9px;
+  
+  color: #3e4676;
+  font-size: .9375rem;
+  line-height: 1.5;
 }
