Хот фикс карты и подготовка к новым виджетам

--- a/src/components/baseStatistic/styles.module.scss
+++ b/src/components/baseStatistic/styles.module.scss
@@ -19,3 +19,14 @@
 .map {
   width: 52%;
 }
+
+.middleContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+.block {
+  width: 31%;
+}
+
