--- a/src/components/baseStatistic/styles.module.scss
+++ b/src/components/baseStatistic/styles.module.scss
@@ -30,3 +30,16 @@
   width: 31%;
 }
 
+.botContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+}
+
+.traffic {
+  width: 65.5%;
+}
+
+.browser {
+  width: 31%;
+}
