Добавление новой страницы + правки по навигации

--- a/src/app/(home)/long/styles.module.scss
+++ b/src/app/(home)/long/styles.module.scss
@@ -11,3 +11,10 @@
   display: flex;
   justify-content: space-around;
 }
+
+.btnBlock {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
