--- a/src/components/longResult/answerPicker/styles.module.scss
+++ b/src/components/longResult/answerPicker/styles.module.scss
@@ -1,6 +1,11 @@
 .container {
   width: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.pickers {
+  display: flex;
   justify-content: space-between;
 }
 
