--- a/src/components/baseStatistic/styles.module.scss
+++ b/src/components/baseStatistic/styles.module.scss
@@ -30,6 +30,17 @@
   width: 31%;
 }
 
+.slider {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+}
+
 .botContainer {
   display: flex;
   justify-content: space-between;
