--- a/src/components/baseStatistic/styles.module.scss
+++ b/src/components/baseStatistic/styles.module.scss
@@ -36,7 +36,7 @@
   flex-direction: column;
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
   padding: 12px 20px 20px;
-  width: 100%;
+  //width: 100%;
   background-color: white;
   border-radius: 5px;
 }
