--- a/src/components/slider/styles.module.scss
+++ b/src/components/slider/styles.module.scss
@@ -4,13 +4,13 @@
   //position: relative;
   //background: #f3f3f3;
   //border: 1px solid #ccc;
-  white-space: nowrap;
+  //white-space: nowrap;
 }
 
 .sliderContent {
   display: flex;
   gap: 3rem;
-  width: 100%;
+  width: 200%;
   //padding-left: 100%;
   animation: marquee 30s linear infinite;
   animation-delay: 0s;
