--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,3 +1,5 @@
+@import "src/mixins";
+
 .logo {
   color: #ffffff;
   margin-right: 193px;
@@ -14,7 +16,7 @@
 }
 
 .header:before {
-  background: #153d77;
+  background: $bg-top;
   content: " ";
   height: 264px;
   left: 0;
