Перекрасил полностью все элементы сайта

--- a/src/components/sideBar/styles.module.scss
+++ b/src/components/sideBar/styles.module.scss
@@ -16,3 +16,17 @@
   background-color: #fff;
   width: 234px;
 }
+
+.sideItemActive {
+  background-color: #fff9f6 !important;
+  color: #FF8200 !important;
+}
+
+.sideDisable {
+  background-color: #fff9f6;
+  color: black;
+}
+
+.icon {
+  color: #FF8200;
+}
