--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -1,18 +1,23 @@
 .container {
-  width: 100%;
-  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
-  padding: 12px 20px 20px;
-  height: 390px;
-  background-color: white;
-  border-radius: 5px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  width: 100%;
+  height: 700px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 3rem;
 }
 
 .title {
-  margin-top: 9px;
-  cursor: pointer;
   color: #3e4676;
   font-size: .9375rem;
   line-height: 1.5;
+}
+
+.filters {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
 }
