--- a/src/components/baseStatistic/styles.module.scss
+++ b/src/components/baseStatistic/styles.module.scss
@@ -41,6 +41,19 @@
   border-radius: 5px;
 }
 
+.swiper {
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  height: 130px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 1rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
 .botContainer {
   display: flex;
   justify-content: space-between;
