--- a/src/components/slider/sliderBlock/styles.module.scss
+++ b/src/components/slider/sliderBlock/styles.module.scss
@@ -4,6 +4,8 @@
   border: 1px solid #f2f2f5;
   padding: 8px;
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  width: 340px;
+  //width: 100%;
 }
 
 .firstBlock {
