--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -4,7 +4,7 @@
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
   padding: 12px 20px 20px;
   width: 100%;
-  height: 700px;
+  height: 900px;
   background-color: white;
   border-radius: 5px;
   margin-top: 3rem;
@@ -20,4 +20,9 @@
   margin-top: 1rem;
   display: flex;
   gap: 1rem;
+}
+
+.slider {
+  padding: 10px;
+  margin-top: 1rem;
 }
