Быстрые правки стилей

--- a/src/components/sideBar/styles.module.scss
+++ b/src/components/sideBar/styles.module.scss
@@ -18,8 +18,10 @@
 }
 
 .sideItemActive {
-  background-color: #fff9f6 !important;
-  color: #FF8200 !important;
+  //background-color: #fff9f6 !important;
+  //color: #FF8200 !important;
+  background-color: #d1dbe4 !important;
+  color: #194a7a !important;
 }
 
 .sideDisable {
