--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,12 +1,28 @@
-$bg-bot: #fff9f6;
-$bg-top: #FF8200;
+// Оранжевый
 
-$map-color: #ff9b33;
-$active-map-color: #007dff;
-$map-obj-hover: #007dff;
+//$bg-bot: #fff9f6;
+//$bg-top: #FF8200;
+//
+//$map-color: #ff9b33;
+//$active-map-color: #007dff;
+//$map-obj-hover: #007dff;
+//
+//$icons-color: #FF8200;
+
+//$pie-1: #ff0300;
+//$pie-2: #FF8200;
+//$pie-3: #fcff00;
+
+
+$bg-bot: #d1dbe4;
+$bg-top: #194a7a;
+
+$map-color: #194a7a;
+$active-map-color: #d1dbe4;
+$map-obj-hover: #d1dbe4;
 
 $icons-color: #FF8200;
 
-$pie-1: #ff0300;
-$pie-2: #FF8200;
-$pie-3: #fcff00;
+$pie-1: #476f95;
+$pie-2: #7593af;
+$pie-3: #a3b7ca;
