--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -1,19 +1,64 @@
-.container {
+.topContainer {
   display: flex;
   flex-direction: column;
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
   padding: 12px 20px 20px;
   width: 100%;
-  height: 900px;
+  //height: 900px;
   background-color: white;
   border-radius: 5px;
   margin-top: 3rem;
 }
 
+.middleContainer {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.middleContainerLeft {
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  background-color: white;
+  border-radius: 5px;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.middleContainerLeftTop {
+  display: flex;
+  flex-direction: column;
+}
+
+.middleContainerRight {
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  background-color: white;
+  border-radius: 5px;
+  width: 64%;
+}
+
+.botContainer {
+  display: flex;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  padding: 12px 20px 20px;
+  width: 100%;
+  //height: 900px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 1.5rem;
+}
+
 .title {
   color: #3e4676;
-  font-size: .9375rem;
-  line-height: 1.5;
+  font-size: 0.9rem;
+}
+
+.mainTitle {
+  color: #3e4676;
+  font-size: 1.3rem;
 }
 
 .filters {
@@ -26,3 +71,80 @@
   padding: 10px;
   margin-top: 1rem;
 }
+
+.mainStat {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.mainStatInfo {
+  display: flex;
+  gap: 1rem;
+  font-size: 16px;
+}
+
+.mainStatInfoLeft {
+  display: flex;
+  align-items: center;
+  color: green;
+}
+
+.mainStatInfoRight {
+  font-size: 12px;
+  color: darkgray;
+}
+
+.average {
+  display: flex;
+  gap: 2rem;
+}
+
+.averageItem {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.averageCost {
+  font-size: 16px;
+}
+
+.averageStat {
+  display: flex;
+  align-items: center;
+}
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.categoryItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  background-color: #f1f1f1;
+  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+}
+
+.categoryItemStat {
+  display: flex;
+  align-items: center;
+}
+
+.categoryItemDescription {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+
+
+
+
+
+
