--- a/src/app/(home)/styles.module.scss
+++ b/src/app/(home)/styles.module.scss
@@ -3,7 +3,8 @@
 
 .main {
   margin-top: 1rem;
-  font-family: "Jost", cursive;
+  //font-family: "Jost", cursive;
+  font-family: "Jost", sans-serif;
 }
 
 .header {
