--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -45,10 +45,14 @@
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
   padding: 12px 20px 20px;
   width: 100%;
-  //height: 900px;
+  height: 400px;
   background-color: white;
   border-radius: 5px;
   margin-top: 1.5rem;
+}
+
+.botItem {
+  width: 49%;
 }
 
 .title {
@@ -140,6 +144,12 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+@media (max-width: 1280px) {
+  .hidden {
+    display: none;
+  }
 }
 
 
