--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -17,19 +17,46 @@
 }
 
 .middleContainerLeft {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.middleContainerBlock {
   box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
   padding: 12px 20px 20px;
   background-color: white;
   border-radius: 5px;
-  width: 35%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  width: 100%;
+  height: 49%;
 }
 
 .middleContainerLeftTop {
   display: flex;
   flex-direction: column;
+}
+
+.blockTitle {
+
+}
+
+.titleTop {
+  display: flex;
+}
+
+.middleContent {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.contentLeft {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
 .middleContainerRight {
