правки по тайтлу

--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -7,7 +7,7 @@
   //height: 900px;
   background-color: white;
   border-radius: 5px;
-  margin-top: 3rem;
+  //margin-top: 3rem;
 }
 
 .middleContainer {
@@ -51,6 +51,11 @@
   justify-content: space-between;
   align-items: center;
   gap: 0.5rem;
+  //border: 1px solid green;
+  //border-radius: 30px;
+  //padding: 8px;
+  //box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  //background-color: rgba(0, 128, 0, .3);
 }
 
 .contentLeft {
