--- a/src/app/(home)/long/purchase/styles.module.scss
+++ b/src/app/(home)/long/purchase/styles.module.scss
@@ -1,3 +1,5 @@
+@import "src/mixins";
+
 .topContainer {
   display: flex;
   flex-direction: column;
@@ -21,15 +23,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .middleContainerBlock {
-  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
-  padding: 12px 20px 20px;
-  background-color: white;
-  border-radius: 5px;
+  //box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  //padding: 12px 20px 20px;
+  //background-color: white;
+  //border-radius: 5px;
   width: 100%;
-  height: 49%;
+  //height: 49%;
+  @include mainWidget;
 }
 
 .middleContainerLeftTop {
@@ -65,11 +69,18 @@
 }
 
 .middleContainerRight {
-  box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
-  padding: 12px 20px 20px;
-  background-color: white;
-  border-radius: 5px;
+  @include mainWidget;
+  //box-shadow: 0 2px 4px rgba(126, 142, 177, .12);
+  //padding: 12px 20px 20px;
+  //background-color: white;
+  //border-radius: 5px;
+  justify-content: space-between;
+  //height: 100%;
   width: 64%;
+}
+
+.middleContainerRightTitle {
+  display: flex;
 }
 
 .botContainer {
@@ -178,11 +189,30 @@
   white-space: nowrap;
 }
 
+@media (max-width: 1560px) {
+  .middleContainer {
+    flex-direction: column;
+  }
+
+  .middleContainerLeft {
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .middleContainerRight {
+    width: 100%;
+  }
+}
+
 @media (max-width: 1420px) {
   .hidden {
     display: none;
   }
+
 }
+
+
 
 
 
