Вывод графиков в дровере

--- a/src/components/drawers/socDrawer/socDrawerComponents/demography/styles.module.scss
+++ b/src/components/drawers/socDrawer/socDrawerComponents/demography/styles.module.scss
@@ -18,8 +18,13 @@
   width: 60%;
   padding: 10px;
 }
-   
+
 .filters {
   display: flex;
   gap: 1rem;
+}
+
+.minGraphs {
+  display: flex;
+  justify-content: space-between;
 }
